# distributed-scalable-system

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: get_grpc.cmake  get_nlohmann_json.cmake  get_spdlog.cmake
config/: data_node_config.json  default_config.json  name_node_config.json
protos/: CMakeLists.txt  test_grpc_service.proto
src/: client.cpp  main.cpp  server.cpp
src/config/: config.cpp  config.hpp  configuration.cpp  configuration.hpp  configuration_v1.cpp  configuration_v1.hpp  configuration_v2.cpp  configuration_v2.hpp
src/config/json/: fixed_string.hpp  json_field_base.hpp  json_struct.hpp  json_unnamed_struct.hpp
src/config/json/detail/: type_traits.hpp
src/core/: cmd_line_args.cpp  cmd_line_args.hpp  conversion.hpp  errors.hpp  logger.cpp  logger.hpp  sys_api.hpp
src/dfs/: block.hpp  data_node.hpp  name_node.cpp  name_node.hpp
src/fs/: distributed_file_system.cpp  distributed_file_system.hpp  file.hpp  file_system.hpp  file_system_provider.cpp  file_system_provider.hpp  local_file_system.cpp  local_file_system.hpp
src/http/: README.md  basic_http_session.hpp  client.cpp  client.hpp  common.cpp  common.hpp  http_client.cpp  http_client.hpp  http_server.cpp  http_server.hpp  request.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp
src/ipc/: ipc.cpp  ipc.hpp
src/utils/: logger.hpp  utils.cpp
tests/: CMakeLists.txt
tests/http-unit-test/: CMakeLists.txt  basic_http_session_test.cpp  http_common_test.cpp  http_headers_test.cpp
tests/json-unit-test/: CMakeLists.txt  fixed_str_test.cpp  json_init_test.cpp
